# flux-eot-lab

./: .env.example  .gitignore  AGENTS.md  METHODOLOGY.md  README.md  bench.py  pyproject.toml  recommend.py  requirements.txt
audio/: annotate-your-audio.md  annotate_real.py  generate_audio.py  manifest.json  spec.md
audio/clips/: cafe_crosstalk_1.json  cafe_crosstalk_2.json  cafe_crosstalk_3.json  clean_long_1.json  clean_long_2.json  clean_long_3.json  clean_short_1.json  clean_short_2.json  clean_short_3.json  crosstalk_1.json  crosstalk_2.json  crosstalk_3.json  noisy_single_1.json  noisy_single_2.json  noisy_single_3.json
flux_eot_lab/: __init__.py  agent.py  analysis.py  clients.py  config.py  mock.py  records.py
results/: raw_real.jsonl  recommendations.md
skills/scaffold-test-clips/: SKILL.md
tests/: smoke_test.py
